2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Fix for one of the previous patch
	* installcheck/Makefile.am (catalogs): Add catalogs/vault2.cat
	* installcheck/amreport.pl: Check successful vault
	* installcheck/catalogs/vault2.cat: New catalog

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix tape_rape for VAULT
	* installcheck/catalogs/vault1.cat: Fxi test

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Fix perl warning

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Improvement for vault
	* perl/Amanda/Report/human.pm: Improvement for vault
	* perl/Amanda/Taper/Worker.pm: Add VAULT keyword to FAILED line
	* server-src/driver.c: Do not log on error
	* server-src/find.c: Parse VAULT keyword
	* installcheck/Makefile.am (catalogs): Add catalogs/vault1.cat
	* installcheck/amreport.pl: Check failed amvault report
	* installcheck/catalogs/vault1.cat: New catalog

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Planner.pm: Undo previous patch
	* perl/Amanda/Taper/Worker.pm: Return errorif plan is empty

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan): Return an error if the
	  dump is not found
	* perl/Amanda/Taper/Worker.pm: Fail if error is set
	* perl/Amanda/Status.pm: Fix for vaulting error

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Set storage and pool
	* perl/Amanda/Report/human.pm: Print timestamp and vault storage
	* installcheck/catalogs/tapers.cat: Fix check

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/progs.m4: AC_DEFINE_UNQUOTED(LPR)
	* common-src/genversion.c: s/LPRCMD/LPR/, use DEFAULT_MAILER

2017-11-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c (sec_tcp_conn_get): Do not reuse a