@@ -264,7 +264,8 @@ catalogs = \
 	catalogs/tapers1.cat \
 	catalogs/taper-parallel-write.cat \
 	catalogs/vault1.cat \
-	catalogs/vault2.cat
+	catalogs/vault2.cat \
+	catalogs/vault3.cat
 EXTRA_DIST += $(catalogs)
 
 
