@@ -1,4 +1,11 @@
 2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Report/human.pm: Use good try
+	* server-src/tapefile.c: Call find_dump with added_todo=1
+	* installcheck/Makefile.am (catalogs): Add catalogs/vault3.cat
+	* installcheck/amreport.pl: Check successful flush/vault
+	* installcheck/catalogs/vault3.cat: New catalog
+
+2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Taper/Worker.pm: Fix for one of the previous patch
 	* installcheck/Makefile.am (catalogs): Add catalogs/vault2.cat
 	* installcheck/amreport.pl: Check successful vault
